--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@
 <body>
     <h1> JOULUKALENTERI </h1>
 
+    <form>
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()"> <br>
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()"> <br>
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()"> <br>
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+
+    </form>
+
 </body>
 
 </html>
