--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()"> <br>
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()"> <br>
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()"> <br>
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
@@ -38,6 +38,11 @@
         <input type="button" value="Laske alennus" onclick="laskeAlennus()">
 
     </form>
+
+    <div id="vastaus"></div>
+    <script>
+
+    </script>
 
 </body>
 
