--- a/24.html
+++ b/24.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="tyyli.css">
 </head>
 
-<body>
+<body class="kuvasivu">
     <div class="container">
         <img src="koira24.jpg" alt="Background">
         <div class="center-text">Hyvää Joulua!</div>
