--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
     <h1> JOULUKALENTERI </h1>
 
     <form>
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
-        <input type="button" value="Laske alennus" onclick="laskeAlennus()">
+        <input type="button" value="Laske alennus" onclick="1">
+        <input type="button" value="Laske alennus" onclick="2">
+        <input type="button" value="Laske alennus" onclick="3">
+        <input type="button" value="Laske alennus" onclick="4">
+        <input type="button" value="Laske alennus" onclick="5">
+        <input type="button" value="Laske alennus" onclick="6">
+        <input type="button" value="Laske alennus" onclick="7">
+        <input type="button" value="Laske alennus" onclick="8">
+        <input type="button" value="Laske alennus" onclick="9">
+        <input type="button" value="Laske alennus" onclick="10">
+        <input type="button" value="Laske alennus" onclick="11">
+        <input type="button" value="Laske alennus" onclick="12">
+        <input type="button" value="Laske alennus" onclick="13">
+        <input type="button" value="Laske alennus" onclick="14">
+        <input type="button" value="Laske alennus" onclick="15">
+        <input type="button" value="Laske alennus" onclick="16">
+        <input type="button" value="Laske alennus" onclick="17">
+        <input type="button" value="Laske alennus" onclick="18">
+        <input type="button" value="Laske alennus" onclick="19">
+        <input type="button" value="Laske alennus" onclick="20">
+        <input type="button" value="Laske alennus" onclick="21">
+        <input type="button" value="Laske alennus" onclick="22">
+        <input type="button" value="Laske alennus" onclick="23">
+        <input type="button" value="Laske alennus" onclick="24">
 
     </form>
 
