--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
     <h1> JOULUKALENTERI </h1>
 
     <form>
-        <input type="button" value="Laske alennus" onclick="1">
-        <input type="button" value="Laske alennus" onclick="2">
-        <input type="button" value="Laske alennus" onclick="3">
-        <input type="button" value="Laske alennus" onclick="4">
-        <input type="button" value="Laske alennus" onclick="5">
-        <input type="button" value="Laske alennus" onclick="6">
-        <input type="button" value="Laske alennus" onclick="7">
-        <input type="button" value="Laske alennus" onclick="8">
-        <input type="button" value="Laske alennus" onclick="9">
-        <input type="button" value="Laske alennus" onclick="10">
-        <input type="button" value="Laske alennus" onclick="11">
-        <input type="button" value="Laske alennus" onclick="12">
-        <input type="button" value="Laske alennus" onclick="13">
-        <input type="button" value="Laske alennus" onclick="14">
-        <input type="button" value="Laske alennus" onclick="15">
-        <input type="button" value="Laske alennus" onclick="16">
-        <input type="button" value="Laske alennus" onclick="17">
-        <input type="button" value="Laske alennus" onclick="18">
-        <input type="button" value="Laske alennus" onclick="19">
-        <input type="button" value="Laske alennus" onclick="20">
-        <input type="button" value="Laske alennus" onclick="21">
-        <input type="button" value="Laske alennus" onclick="22">
-        <input type="button" value="Laske alennus" onclick="23">
-        <input type="button" value="Laske alennus" onclick="24">
+        <input type="button" value="1" onclick="1">
+        <input type="button" value="2" onclick="2">
+        <input type="button" value="3" onclick="3">
+        <input type="button" value="4" onclick="4">
+        <input type="button" value="5" onclick="5">
+        <input type="button" value="6" onclick="6">
+        <input type="button" value="7" onclick="7">
+        <input type="button" value="8" onclick="8">
+        <input type="button" value="9" onclick="9">
+        <input type="button" value="10" onclick="10">
+        <input type="button" value="11" onclick="11">
+        <input type="button" value="12" onclick="12">
+        <input type="button" value="13" onclick="13">
+        <input type="button" value="14" onclick="14">
+        <input type="button" value="15" onclick="15">
+        <input type="button" value="16" onclick="16">
+        <input type="button" value="17" onclick="17">
+        <input type="button" value="18" onclick="18">
+        <input type="button" value="19" onclick="19">
+        <input type="button" value="20" onclick="20">
+        <input type="button" value="21" onclick="21">
+        <input type="button" value="22" onclick="22">
+        <input type="button" value="23" onclick="23">
+        <input type="button" value="24" onclick="window.location.href='24.html'">
 
     </form>
 
