--- a/index.html
+++ b/index.html
@@ -12,36 +12,38 @@
     <h1> JOULUKALENTERI </h1>
 
     <form>
-        <input type="button" value="1" onclick="1">
-        <input type="button" value="2" onclick="2">
-        <input type="button" value="3" onclick="3">
-        <input type="button" value="4" onclick="4">
-        <input type="button" value="5" onclick="5">
-        <input type="button" value="6" onclick="6">
-        <input type="button" value="7" onclick="7">
-        <input type="button" value="8" onclick="8">
-        <input type="button" value="9" onclick="9">
-        <input type="button" value="10" onclick="10">
-        <input type="button" value="11" onclick="11">
-        <input type="button" value="12" onclick="12">
-        <input type="button" value="13" onclick="13">
-        <input type="button" value="14" onclick="14">
-        <input type="button" value="15" onclick="15">
-        <input type="button" value="16" onclick="16">
-        <input type="button" value="17" onclick="17">
-        <input type="button" value="18" onclick="18">
-        <input type="button" value="19" onclick="19">
-        <input type="button" value="20" onclick="20">
-        <input type="button" value="21" onclick="21">
-        <input type="button" value="22" onclick="22">
-        <input type="button" value="23" onclick="23">
+        <input type="button" value="1" onclick="avaaLuukku()">
+        <input type="button" value="2" onclick="avaaLuukku()">
+        <input type="button" value="3" onclick="avaaLuukku()">
+        <input type="button" value="4" onclick="avaaLuukku()">
+        <input type="button" value="5" onclick="avaaLuukku()">
+        <input type="button" value="6" onclick="avaaLuukku()">
+        <input type="button" value="7" onclick="avaaLuukku()">
+        <input type="button" value="8" onclick="avaaLuukku()">
+        <input type="button" value="9" onclick="avaaLuukku()">
+        <input type="button" value="10" onclick="avaaLuukku()">
+        <input type="button" value="11" onclick="avaaLuukku()">
+        <input type="button" value="12" onclick="avaaLuukku()">
+        <input type="button" value="13" onclick="avaaLuukku()">
+        <input type="button" value="14" onclick="avaaLuukku()">
+        <input type="button" value="15" onclick="avaaLuukku()">
+        <input type="button" value="16" onclick="avaaLuukku()">
+        <input type="button" value="17" onclick="avaaLuukku()">
+        <input type="button" value="18" onclick="avaaLuukku()">
+        <input type="button" value="19" onclick="avaaLuukku()">
+        <input type="button" value="20" onclick="avaaLuukku()">
+        <input type="button" value="21" onclick="avaaLuukku()">
+        <input type="button" value="22" onclick="avaaLuukku()">
+        <input type="button" value="23" onclick="avaaLuukku()">
         <input type="button" value="24" onclick="window.location.href='24.html'">
 
     </form>
 
     <div id="vastaus"></div>
     <script>
-
+        function avaaLuukku() {
+            newDate()
+        }
     </script>
 
 </body>
