--- a/index.html
+++ b/index.html
@@ -12,31 +12,101 @@
     <h1> JOULUKALENTERI </h1>
 
     <form>
-        <input type="button" value="1" onclick="avaaLuukku()">
-        <input type="button" value="2" onclick="avaaLuukku()">
-        <input type="button" value="3" onclick="avaaLuukku()">
-        <input type="button" value="4" onclick="avaaLuukku()">
-        <input type="button" value="5" onclick="avaaLuukku()">
-        <input type="button" value="6" onclick="avaaLuukku()">
-        <input type="button" value="7" onclick="avaaLuukku()">
-        <input type="button" value="8" onclick="avaaLuukku()">
-        <input type="button" value="9" onclick="avaaLuukku()">
-        <input type="button" value="10" onclick="avaaLuukku()">
-        <input type="button" value="11" onclick="avaaLuukku()">
-        <input type="button" value="12" onclick="avaaLuukku()">
-        <input type="button" value="13" onclick="avaaLuukku()">
-        <input type="button" value="14" onclick="avaaLuukku()">
-        <input type="button" value="15" onclick="avaaLuukku()">
-        <input type="button" value="16" onclick="avaaLuukku()">
-        <input type="button" value="17" onclick="avaaLuukku()">
-        <input type="button" value="18" onclick="avaaLuukku()">
-        <input type="button" value="19" onclick="avaaLuukku()">
-        <input type="button" value="20" onclick="avaaLuukku()">
-        <input type="button" value="21" onclick="avaaLuukku()">
-        <input type="button" value="22" onclick="avaaLuukku()">
-        <input type="button" value="23" onclick="avaaLuukku()">
-        <input type="button" value="24" onclick="window.location.href='24.html'">
-
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="1">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="2">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="3">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="4">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="5">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="6">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="7">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="8">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="9">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="10">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="11">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="12">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="13">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="14">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="15">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="16">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="17">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="18">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="19">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="20">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="21">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="22">
+        </div>
+        <div class="grid-item">
+            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <input type="button" value="23">
+        </div>
+        <div class="grid-item">
+            <input type="button" value="24" onclick="window.location.href='24.html'">
+        </div>
     </form>
 
     <div id="vastaus"></div>
