--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <input type="button" value="23">
         </div>
         <div class="grid-item">
-            <input type="button" value="24" onclick="window.location.href='24.html'">
+            <input type="button" value="24" onclick="window.open('24.html', '_blank')">
         </div>
     </form>
 
