--- a/index.html
+++ b/index.html
@@ -14,95 +14,95 @@
     <form>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="1">
+            <input type="button" value="1" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="2">
+            <input type="button" value="2" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="3">
+            <input type="button" value="3" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="4">
+            <input type="button" value="4" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="5">
+            <input type="button" value="5" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="6">
+            <input type="button" value="6" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="7">
+            <input type="button" value="7" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="8">
+            <input type="button" value="8" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="9">
+            <input type="button" value="9" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="10">
+            <input type="button" value="10" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="11">
+            <input type="button" value="11" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="12">
+            <input type="button" value="12" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="13">
+            <input type="button" value="13" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="14">
+            <input type="button" value="14" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="15">
+            <input type="button" value="15" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="16">
+            <input type="button" value="16" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="17">
+            <input type="button" value="17" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="18">
+            <input type="button" value="18" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="19">
+            <input type="button" value="19" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="20">
+            <input type="button" value="20" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="21">
+            <input type="button" value="21" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="22">
+            <input type="button" value="22" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="23">
+            <input type="button" value="23" onclick="avaaLuukku()">
         </div>
         <div class="grid-item">
             <input type="button" value="24" onclick="window.open('24.html', '_blank')">
