--- a/index.html
+++ b/index.html
@@ -112,7 +112,14 @@
     <div id="vastaus"></div>
     <script>
         function avaaLuukku() {
-            newDate()
+
+
+            let tanaan = new Date();
+            let paivamaara = tanaan.getDate();
+            let button = getElementById("").value;
+            if (paivamaara == ) {
+
+            }
         }
     </script>
 
