--- a/index.html
+++ b/index.html
@@ -14,95 +14,95 @@
     <form>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="1" onclick="avaaLuukku()">
+            <input type="button" value="1" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="2" onclick="avaaLuukku()">
+            <input type="button" value="2" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="3" onclick="avaaLuukku()">
+            <input type="button" value="3" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="4" onclick="avaaLuukku()">
+            <input type="button" value="4" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="5" onclick="avaaLuukku()">
+            <input type="button" value="5" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="6" onclick="avaaLuukku()">
+            <input type="button" value="6" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="7" onclick="avaaLuukku()">
+            <input type="button" value="7" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="8" onclick="avaaLuukku()">
+            <input type="button" value="8" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="9" onclick="avaaLuukku()">
+            <input type="button" value="9" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="10" onclick="avaaLuukku()">
+            <input type="button" value="10" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="11" onclick="avaaLuukku()">
+            <input type="button" value="11" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="12" onclick="avaaLuukku()">
+            <input type="button" value="12" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="13" onclick="avaaLuukku()">
+            <input type="button" value="13" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="14" onclick="avaaLuukku()">
+            <input type="button" value="14" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="15" onclick="avaaLuukku()">
+            <input type="button" value="15" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="16" onclick="avaaLuukku()">
+            <input type="button" value="16" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="17" onclick="avaaLuukku()">
+            <input type="button" value="17" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="18" onclick="avaaLuukku()">
+            <input type="button" value="18" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="19" onclick="avaaLuukku()">
+            <input type="button" value="19" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="20" onclick="avaaLuukku()">
+            <input type="button" value="20" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="21" onclick="avaaLuukku()">
+            <input type="button" value="21" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="22" onclick="avaaLuukku()">
+            <input type="button" value="22" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
-            <input type="button" value="23" onclick="avaaLuukku()">
+            <input type="button" value="23" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
             <input type="button" value="24" onclick="window.open('24.html', '_blank')">
@@ -111,15 +111,9 @@
 
     <div id="vastaus"></div>
     <script>
-        function avaaLuukku() {
+        function avaaLuukku(button) {
+            button.style.display = "none";
 
-
-            let tanaan = new Date();
-            let paivamaara = tanaan.getDate();
-            let button = getElementById("").value;
-            if (paivamaara == ) {
-
-            }
         }
     </script>
 
