--- a/index.html
+++ b/index.html
@@ -13,51 +13,51 @@
 
     <form>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva1.jpg');"></div>
             <input type="button" value="1" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva2.jpg');"></div>
             <input type="button" value="2" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva3.jpg');"></div>
             <input type="button" value="3" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva4.jpg');"></div>
             <input type="button" value="4" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva5.jpg');"></div>
             <input type="button" value="5" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva6.jpg');"></div>
             <input type="button" value="6" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva7.jpg');"></div>
             <input type="button" value="7" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva8.jpg');"></div>
             <input type="button" value="8" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva9.jpg');"></div>
             <input type="button" value="9" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva10.jpg');"></div>
             <input type="button" value="10" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva11.jpg');"></div>
             <input type="button" value="11" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva12.jpg');"></div>
             <input type="button" value="12" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
