--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <input type="button" value="16" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva17.png');"></div>
             <input type="button" value="17" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
