--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
             <input type="button" value="12" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva13.png');"></div>
             <input type="button" value="13" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva14.jpg');"></div>
             <input type="button" value="14" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva15.jpeg');"></div>
             <input type="button" value="15" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva: 16png');"></div>
             <input type="button" value="16" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
@@ -81,27 +81,27 @@
             <input type="button" value="17" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva18.png');"></div>
             <input type="button" value="18" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva19.png');"></div>
             <input type="button" value="19" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva20.jpg');"></div>
             <input type="button" value="20" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva21.jpg');"></div>
             <input type="button" value="21" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva22.jpg');"></div>
             <input type="button" value="22" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
-            <div class="photo-box" style="background-image: url('koira24.jpg');"></div>
+            <div class="photo-box" style="background-image: url('kuva23.jpg');"></div>
             <input type="button" value="23" onclick="avaaLuukku(this)">
         </div>
         <div class="grid-item">
