--- a/index.html
+++ b/index.html
@@ -9,106 +9,108 @@
 </head>
 
 <body>
-    <h1> JOULUKALENTERI </h1>
-
-    <form>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva1.jpg');"></div>
-            <input type="button" value="1" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva2.jpg');"></div>
-            <input type="button" value="2" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva3.jpg');"></div>
-            <input type="button" value="3" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva4.jpg');"></div>
-            <input type="button" value="4" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva5.jpg');"></div>
-            <input type="button" value="5" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva6.jpg');"></div>
-            <input type="button" value="6" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva7.jpg');"></div>
-            <input type="button" value="7" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva8.jpg');"></div>
-            <input type="button" value="8" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva9.jpg');"></div>
-            <input type="button" value="9" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva10.jpg');"></div>
-            <input type="button" value="10" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva11.jpg');"></div>
-            <input type="button" value="11" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva12.jpg');"></div>
-            <input type="button" value="12" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva13.png');"></div>
-            <input type="button" value="13" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva14.jpg');"></div>
-            <input type="button" value="14" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva15.jpeg');"></div>
-            <input type="button" value="15" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva: 16png');"></div>
-            <input type="button" value="16" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva17.png');"></div>
-            <input type="button" value="17" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva18.png');"></div>
-            <input type="button" value="18" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva19.png');"></div>
-            <input type="button" value="19" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva20.jpg');"></div>
-            <input type="button" value="20" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva21.jpg');"></div>
-            <input type="button" value="21" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva22.jpg');"></div>
-            <input type="button" value="22" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <div class="photo-box" style="background-image: url('kuva23.jpg');"></div>
-            <input type="button" value="23" onclick="avaaLuukku(this)">
-        </div>
-        <div class="grid-item">
-            <input type="button" value="24" onclick="avaaLuukku(this)">
-        </div>
-    </form>
-
+    <div class="reunus1">
+        <h1> JOULUKALENTERI </h1>
+    </div>
+    <div class="reunus2">
+        <form>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva1.jpg');"></div>
+                <input type="button" value="1" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva2.jpg');"></div>
+                <input type="button" value="2" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva3.jpg');"></div>
+                <input type="button" value="3" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva4.jpg');"></div>
+                <input type="button" value="4" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva5.jpg');"></div>
+                <input type="button" value="5" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva6.jpg');"></div>
+                <input type="button" value="6" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva7.jpg');"></div>
+                <input type="button" value="7" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva8.jpg');"></div>
+                <input type="button" value="8" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva9.jpg');"></div>
+                <input type="button" value="9" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva10.jpg');"></div>
+                <input type="button" value="10" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva11.jpg');"></div>
+                <input type="button" value="11" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva12.jpg');"></div>
+                <input type="button" value="12" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva13.png');"></div>
+                <input type="button" value="13" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva14.jpg');"></div>
+                <input type="button" value="14" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva15.jpeg');"></div>
+                <input type="button" value="15" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva: 16png');"></div>
+                <input type="button" value="16" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva17.png');"></div>
+                <input type="button" value="17" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva18.png');"></div>
+                <input type="button" value="18" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva19.png');"></div>
+                <input type="button" value="19" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva20.jpg');"></div>
+                <input type="button" value="20" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva21.jpg');"></div>
+                <input type="button" value="21" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva22.jpg');"></div>
+                <input type="button" value="22" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <div class="photo-box" style="background-image: url('kuva23.jpg');"></div>
+                <input type="button" value="23" onclick="avaaLuukku(this)">
+            </div>
+            <div class="grid-item">
+                <input type="button" value="24" onclick="avaaLuukku(this)">
+            </div>
+        </form>
+    </div>
     <div id="vastaus"></div>
     <script>
         function avaaLuukku(button) {
