--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <input type="button" value="15" onclick="avaaLuukku(this)">
             </div>
             <div class="grid-item">
-                <div class="photo-box" style="background-image: url('kuva: 16png');"></div>
+                <div class="photo-box" style="background-image: url('kuva.16png');"></div>
                 <input type="button" value="16" onclick="avaaLuukku(this)">
             </div>
             <div class="grid-item">
