vikat kuvat testattu

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                 <input type="button" value="20" onclick="avaaLuukku(this)">
             </div>
             <div class="grid-item">
-                <div class="photo-box" style="background-image: url('kuva21.jpg');"></div>
+                <div class="photo-box" style="background-image: url('kuva21.jpeg');"></div>
                 <input type="button" value="21" onclick="avaaLuukku(this)">
             </div>
             <div class="grid-item">
-                <div class="photo-box" style="background-image: url('kuva22.jpg');"></div>
+                <div class="photo-box" style="background-image: url('kuva22.jpeg');"></div>
                 <input type="button" value="22" onclick="avaaLuukku(this)">
             </div>
             <div class="grid-item">
