--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         }
         // alla lumisadeanimaatio 50% tod.näköisyydellä
         function lumisade() {
-            const maara = 200; // montako hiutaletta (säädä tarpeen mukaan)
+            let maara = 200; // montako hiutaletta
 
             for (let i = 0; i < maara; i++) {
                 let flake = document.createElement("div");
@@ -148,7 +148,7 @@
                 flake.style.pointerEvents = "none";
 
                 // animaatio
-                const duration = Math.random() * 3 + 3; // 3–6 sekuntia
+                let duration = Math.random() * 3 + 3; // 3–6 sekuntia
                 flake.style.transition = `transform ${duration}s linear, opacity ${duration}s`;
 
                 document.body.appendChild(flake);
